name:               reskell
version:            0.0
homepage:           https://github.com/rostayob/reskell
synopsis:           Hacker news clone in haskell
category:           Web
license:            GPL-2
author:             Francesco Mazzoli
maintainer:         Francesco Mazzoli <f@mazzo.li>
cabal-version:      >= 1.6
build-type:         Simple

source-repository head
  type:      git
  location:  git://github.com/rostayob/reskell
  branch:    master

executable reskell
  hs-source-dirs:    src
  main-is:           Main.hs

  build-depends:     base >= 4 && < 5
                   , acid-state
                   , bson
                   , bytestring
                   , cmdargs
                   , containers
                   , digestive-functors >= 0.0.2.1
                   , digestive-functors-happstack >= 0.0.2.1
                   , digestive-functors-hsp >= 0.2.1
                   , extensible-exceptions >= 0.1.1.2
                   , filepath
                   , happstack-data >= 0.6
                   , happstack-hsp >= 6.0.1
                   , happstack-ixset >= 6.0.1
                   , happstack-server >= 0.6
                   , happstack-state >= 6
                   , happstack-util >= 0.6
                   , hashable
                   , hashmap
                   , hslogger >= 1.1
                   , hsp >= 0.6.1
                   , hsx >= 0.9
                   , mtl >= 2.0.1
                   , old-locale
                   , parsec >= 3.1.1
                   , pwstore-fast >= 2.1
                   , safecopy
                   , template-haskell
                   , time >= 1.2.0.3
                   , web-routes >= 0.24.1
                   , web-routes-happstack >= 0.22.1
                   , web-routes-hsp >= 0.21.3

  GHC-options:       -Wall -fno-warn-unused-do-bind -threaded