name:               reskell
version:            0.0
homepage:           https://github.com/rostayob/reskell
synopsis:           Hacker news clone in haskell
category:           Web
license:            GPL-2
author:             Francesco Mazzoli
maintainer:         Francesco Mazzoli <f@mazzo.li>
cabal-version:      >= 1.6
build-type:         Simple

source-repository head
  type:      git
  location:  git://github.com/rostayob/reskell
  branch:    master

executable reskell
  hs-source-dirs:    src
  main-is:           Main.hs

  build-depends:     base >= 4 && < 5
                   , acid-state >= 0.4.1 && < 0.5
                   , bson
                   , bytestring
                   , cmdargs
                   , containers
                   , digestive-functors >= 0.0.2 && < 0.0.3
                   , digestive-functors-happstack >= 0.0.2 && < 0.0.3
                   , digestive-functors-hsp >= 0.2 && < 0.3
                   , extensible-exceptions
                   , filepath
                   , happstack-data >= 6 && < 7
                   , happstack-hsp >= 6.0.1 && < 7
                   , happstack-ixset >= 6.0.1 && < 7
                   , happstack-server >= 6 && < 7
                   , happstack-state >= 6 && < 7
                   , happstack-util >= 0.6 && < 7
                   , hashable
                   , hslogger >= 1.1
                   , hsp >= 0.6.1
                   , hsx >= 0.9
                   , mtl
                   , old-locale
                   , parsec >= 3 && < 4
                   , pwstore-fast >= 2.1 && < 3
                   , safecopy >= 0.5.1 && < 0.6
                   , template-haskell
                   , time
                   , unordered-containers
                   , upskirt >= 0.0.3
                   , utf8-string >= 0.3.6 < 0.4
                   , web-routes >= 0.24.1
                   , web-routes-happstack >= 0.22.1
                   , web-routes-hsp >= 0.21.3

  GHC-options:       -Wall -fno-warn-unused-do-bind -threaded -optl-static -optl-pthread