name:               reskell
version:            0.0
homepage:           https://github.com/rostayob/reskell
synopsis:           Hacker news clone in haskell
category:           Web
license:            GPL-2
author:             Francesco Mazzoli
maintainer:         Francesco Mazzoli <f@mazzo.li>
cabal-version:      >= 1.6
build-type:         Simple

source-repository head
  type:      git
  location:  git://github.com/rostayob/reskell
  branch:    master

executable reskell
  hs-source-dirs:    src
  main-is:           Main.hs

  build-depends:     base >= 4 && < 5
                   , acid-state
                   , bson
                   , bytestring
                   , cmdargs
                   , containers
                   , digestive-functors < 0.2
                   , digestive-functors-happstack < 0.1.1
                   , digestive-functors-hsp
                   , extensible-exceptions
                   , filepath
                   , happstack-data
                   , happstack-hsp
                   , happstack-ixset
                   , happstack-server
                   , happstack-util
                   , hashable
                   , hslogger
                   , hsp
                   , hsx
                   , mtl
                   , old-locale
                   , parsec
                   , pwstore-fast
                   , safecopy
                   , template-haskell
                   , time
                   , unordered-containers
                   , sundown
                   , utf8-string
                   , web-routes
                   , web-routes-happstack
                   , web-routes-hsp

  GHC-options:       -Wall -fno-warn-unused-do-bind -threaded
